fix alignment of publication children

--- a/src/components/publication-item.css
+++ b/src/components/publication-item.css
@@ -5,7 +5,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .publication-image {
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     max-width: calc(70% - 15px);
+    margin-left: 15px;
 }
 
 .publication-item > footer {
